# faultdetection-epuckswarm

./: .gitignore  CMakeLists.txt  README
analysis/: analyze_output.py
controllers/: CMakeLists.txt
controllers/behaviors/: aggregatebehavior.cpp  aggregatebehavior.h  antiphototaxisbehavior.cpp  antiphototaxisbehavior.h  behavior.cpp  behavior.h  circlebehavior.cpp  circlebehavior.h  dispersebehavior.cpp  dispersebehavior.h  flockingbehavior.cpp  flockingbehavior.h  homingtofoodbeaconbehavior.cpp  homingtofoodbeaconbehavior.h  phototaxisbehavior.cpp  phototaxisbehavior.h  randomwalkbehavior.cpp  randomwalkbehavior.h
controllers/epuck_foraging/: CMakeLists.txt  aggregatebehavior.cpp  aggregatebehavior.h  bayesianinferencefeaturevector.cpp  bayesianinferencefeaturevector.h  celldatacontainers.cpp  celldatacontainers.h  dispersebehavior.cpp  epuck_foraging.cpp  epuck_foraging.h  flockingbehavior.cpp  flockingbehavior.h  homingtofoodbeaconbehavior.h  observedfeaturevector.cpp  phototaxisbehavior.cpp  propriofeaturevector.h  randomwalkbehavior.h  sensingandcommunication.cpp
controllers/epuck_hom_swarm/: CMakeLists.txt  CMakeLists.txt~  antiphototaxisbehavior.cpp  antiphototaxisbehavior.h  behavior.cpp  behavior.h  circlebehavior.cpp  circlebehavior.h  crminrobotagent_optimised.cpp  crminrobotagent_optimised.h  dispersebehavior.h  epuck_hom_swarm.cpp  epuck_hom_swarm.h  featurevectorsinrobotagent.cpp  featurevectorsinrobotagent.h  homingtofoodbeaconbehavior.cpp  observedfeaturevector.h  phototaxisbehavior.h  propriofeaturevector.cpp  randomwalkbehavior.cpp  sensingandcommunication.h
controllers/epuck_obstacleavoidance/: epuck_obstacleavoidance.cpp  epuck_obstacleavoidance.h
controllers/fault_detection_model/: featurevectorsinrobotagent.cpp  featurevectorsinrobotagent.h  sensingandcommunication.cpp  sensingandcommunication.h
controllers/fault_detection_model/crm/: celldatacontainers.cpp  celldatacontainers.h  crminrobotagent_optimised.cpp  crminrobotagent_optimised.h
controllers/feature_vector/: bayesianinferencefeaturevector.cpp  bayesianinferencefeaturevector.h  observedfeaturevector.cpp  observedfeaturevector.h  propriofeaturevector.cpp  propriofeaturevector.h
experiments/: epuck_foraging.argos  epuck_hom_swarm.argos  epuck_obstacleavoidance.argos
experiments/scale/: epuck_foraging_16.argos  epuck_foraging_64.argos
loop_functions/: CMakeLists.txt
loop_functions/foraging_loop_functions/: CMakeLists.txt  CMakeLists.txt~  foraging_loop_functions.cpp  foraging_loop_functions.h  foraging_qt_user_functions.cpp  foraging_qt_user_functions.h
loop_functions/homswarm_loop_functions/: CMakeLists.txt  CMakeLists.txt~  homswarm_loop_functions.cpp  homswarm_loop_functions.h  homswarm_qt_user_functions.cpp  homswarm_qt_user_functions.h
loop_functions/id_loop_functions/: CMakeLists.txt  id_qtuser_functions.cpp  id_qtuser_functions.h
