add_library(epuck_hom_swarm SHARED epuck_hom_swarm.h epuck_hom_swarm.cpp behavior.h behavior.cpp dispersebehavior.h dispersebehavior.cpp randomwalkbehavior.h randomwalkbehavior.cpp phototaxisbehavior.h phototaxisbehavior.cpp antiphototaxisbehavior.h antiphototaxisbehavior.cpp homingtofoodbeaconbehavior.h homingtofoodbeaconbehavior.cpp aggregatebehavior.h aggregatebehavior.cpp flockingbehavior.h flockingbehavior.cpp circlebehavior.h circlebehavior.cpp propriofeaturevector.h propriofeaturevector.cpp observedfeaturevector.h observedfeaturevector.cpp bayesianinferencefeaturevector.h bayesianinferencefeaturevector.cpp featurevectorsinrobotagent.h featurevectorsinrobotagent.cpp celldatacontainers.h celldatacontainers.cpp crminrobotagent_optimised.h crminrobotagent_optimised.cpp sensingandcommunication.h sensingandcommunication.cpp)
target_link_libraries(epuck_hom_swarm
  argos3plugin_simulator_epuck)
#target_link_libraries(epuck_hom_swarm
#  argos3core_simulator
#  argos3plugin_simulator_epuck
#  argos3plugin_simulator_genericrobot)
